--- a/app/src/main/res/layout/list_item_contact.xml
+++ b/app/src/main/res/layout/list_item_contact.xml
@@ -4,20 +4,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/contact_picture"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        tools:layout_constraintTop_creator="1"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        tools:layout_constraintLeft_creator="1"
+        android:contentDescription="@string/contact_image"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="16dp"
-        android:contentDescription="@string/contact_image"/>
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"/>
 
     <TextView
         android:id="@+id/contact_name"
@@ -27,7 +29,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:textColor="@android:color/black"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/contact_picture"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,25 +41,48 @@
         android:id="@+id/contact_seat_code"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="9dp"
-        app:layout_constraintLeft_toLeftOf="@+id/contact_name"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/contact_picture"
         app:layout_constraintTop_toBottomOf="@+id/contact_name"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintTop_creator="1"
-        tools:text="3E10"/>
+        tools:text="3E10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1"
+        tools:text="51619344"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/contact_seat_code"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/contact_name"/>
 
     <ImageView
         android:id="@+id/contact_status"
         android:layout_width="50dp"
         android:layout_height="0dp"
-        app:srcCompat="@drawable/ic_warning_red"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="@+id/contact_picture"
         android:layout_marginEnd="16dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/contact_picture"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@+id/contact_name"
-        android:layout_marginRight="16dp"/>
+        app:srcCompat="@drawable/ic_warning_red"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="@string/contact_image"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"/>
 
 </android.support.constraint.ConstraintLayout>
