--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -16,7 +16,23 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.032"
-        android:id="@+id/contacts_title"/>
+        android:id="@+id/contacts_title"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/btn_im_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:clickable="true"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toTopOf="@+id/contacts_recycler_view"
+        app:layout_constraintLeft_toRightOf="@+id/contacts_title"
+        app:srcCompat="@android:drawable/ic_menu_send"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/contacts_recycler_view"
@@ -31,6 +47,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contacts_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/contacts_title"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"/>
 
 </android.support.constraint.ConstraintLayout>
